change vsphere tag from khaleesi to vsphere
[#161637619]

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -460,7 +460,7 @@ jobs:
       trigger: true
   - task: bbl-up
     file: ci/scripts/bosh-bootloader/acceptance/task.yml
-    tags: [khaleesi]
+    tags: [vsphere]
     params:
       BBL_IAAS: vsphere
       BBL_VSPHERE_NETWORK: ((vsphere_network_name))
@@ -498,7 +498,7 @@ jobs:
       trigger: true
   - task: bbl-up
     file: ci/scripts/bosh-bootloader/acceptance/task.yml
-    tags: [khaleesi]
+    tags: [vsphere]
     params:
       BBL_IAAS: openstack
       BBL_OPENSTACK_INTERNAL_CIDR: ((bbl_openstack_internal_cidr))
@@ -753,7 +753,7 @@ jobs:
       passed: [bbl-release-candidate-bump-deployments]
   - task: bbl-up
     file: ci/scripts/bosh-bootloader/acceptance/task.yml
-    tags: [khaleesi]
+    tags: [vsphere]
     params:
       BBL_IAAS: vsphere
       BBL_VSPHERE_NETWORK: ((vsphere_network_name))
@@ -792,7 +792,7 @@ jobs:
       passed: [bbl-release-candidate-bump-deployments]
   - task: bbl-up
     file: ci/scripts/bosh-bootloader/acceptance/task.yml
-    tags: [khaleesi]
+    tags: [vsphere]
     params:
       BBL_IAAS: openstack
       BBL_OPENSTACK_INTERNAL_CIDR: ((bbl_openstack_internal_cidr))
@@ -2102,7 +2102,7 @@ jobs:
     - get: ci
       resource: infrastructure-ci
     - get: cf-deployment-concourse-tasks-bbl-dev
-      tags: [khaleesi]
+      tags: [vsphere]
       passed:
       - bbl-aws-cf
       - bbl-gcp-cf
@@ -2134,7 +2134,7 @@ jobs:
   - task: bbl-up-vsphere-concourse-bosh-director
     file: ci/scripts/infrastructure-ci/bbl-up-concourse-bosh-director/task-vsphere.yml
     image: cf-deployment-concourse-tasks-bbl-dev
-    tags: [khaleesi]
+    tags: [vsphere]
     params:
       BBL_VSPHERE_NETWORK: ((vsphere_network_name))
       BBL_VSPHERE_SUBNET: ((vsphere_concourse_subnet))
@@ -3176,7 +3176,7 @@ jobs:
     - get: ci
       resource: infrastructure-ci
     - get: cf-deployment-concourse-tasks-bbl-dev
-      tags: [khaleesi]
+      tags: [vsphere]
       passed:
       - bbl-aws-cf-bump-deployments
       - bbl-gcp-cf-bump-deployments
@@ -3204,7 +3204,7 @@ jobs:
   - task: bbl-up-vsphere-concourse-bosh-director
     file: ci/scripts/infrastructure-ci/bbl-up-concourse-bosh-director/task-vsphere.yml
     image: cf-deployment-concourse-tasks-bbl-dev
-    tags: [khaleesi]
+    tags: [vsphere]
     params:
       BBL_VSPHERE_NETWORK: ((vsphere_network_name))
       BBL_VSPHERE_SUBNET: ((vsphere_concourse_subnet))
