Save bosh logs for Azure acceptance test bbl-up
[#161689542](https://www.pivotaltracker.com/story/show/161689542)

Co-authored-by: Carlos Iriarte <me@carlosiriarte.com>

--- a/scripts/bosh-bootloader/acceptance/task.yml
+++ b/scripts/bosh-bootloader/acceptance/task.yml
@@ -10,6 +10,9 @@ inputs:
   - name: bosh-bootloader
   - name: ci
 
+outputs:
+  - name: bosh-logs
+
 run:
   path: ci/scripts/bosh-bootloader/acceptance/task
 
