--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -277,6 +277,14 @@ resources:
   source:
     uri: https://github.com/joshzarrabi/concourse-smoke-tests
 
+- name: bbl-ci-logs-stable-trusty
+  type: s3
+  source:
+    bucket: bbl-ci-logs
+    versioned_file: stable-trusty/bosh-logs.txt
+    access_key_id: ((aws_access_key_id))
+    secret_access_key: ((aws_secret_access_key))
+
 jobs:
 - name: bump-leftovers
   public: true
@@ -429,6 +437,10 @@ jobs:
         RUN_TEST: bbl-up
         BBL_DOWN_TIMEOUT: 20m
         BBL_UP_TIMEOUT: 80m
+      ensure:
+        put: bbl-ci-logs-stable-trusty
+        params:
+          file: bosh-logs/bosh-logs.txt
     - task: plan
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
