--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1311,6 +1311,7 @@ jobs:
         - concourse-deployment/cluster/operations/privileged-https.yml
         - concourse-deployment/cluster/operations/privileged-http.yml
         - concourse-deployment/cluster/operations/tls.yml
+        - concourse-deployment/cluster/operations/tls-vars.yml
         - concourse-deployment/cluster/operations/web-network-extension.yml
   - task: smoke-tests
     file: concourse-smoke-tests/ci/tasks/run-tests-dynamic.yml
@@ -2471,6 +2472,7 @@ jobs:
         - concourse-deployment/cluster/operations/privileged-http.yml
         - concourse-deployment/cluster/operations/basic-auth.yml
         - concourse-deployment/cluster/operations/tls.yml
+        - concourse-deployment/cluster/operations/tls-vars.yml
         - concourse-deployment/cluster/operations/web-network-extension.yml
   - task: smoke-tests
     file: concourse-smoke-tests/ci/tasks/run-tests-dynamic.yml
